cros: Fix missing gaia in single process mash

In single process mash, gaia dialog widget goes through the
following stack:
  WindowServiceDelegateImpl::SetModalType ->
  wm::GetDefaultParent ->
  GetSystemModalContainer

It does not have a |transient_parent| and hence assumed to be
a user window and put into SystemModalContainer instead of
LockSystemModalContainer.

Since the dialog widget is created with a proper container parent,
the CL fixes the issue by re-using existing container parent in
GetSystemModalContainer.

Bug: 876329
Change-Id: Iaf38273e852738b7d258a82f76dae9952051a08d
Reviewed-on: https://chromium-review.googlesource.com/1185406
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585278}
Former-commit-id: 40b3fb1faf02084fcfc005dbec31eb1536a1b785